--- a/package.json
+++ b/package.json
@@ -25,13 +25,19 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "globals": "^16.0.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
-    "socket.io": "^4.8.1"
+    "redis": "^5.0.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "zod": "^3.24.3"
   },
   "husky": {
     "hooks": {
